<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.matanghuy.mizorem.editevent.details.EventDetailsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/what"
        android:id="@+id/tvWhat"
        android:layout_gravity="center_horizontal|start"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEventName"
        android:hint="@string/event_name"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/where"
        android:id="@+id/tvWhere"
        android:layout_gravity="center_horizontal|start"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEventPlace"
        android:hint="@string/event_place"
        android:maxLines="1"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/when"
        android:id="@+id/tvWhen"
        android:layout_gravity="center_horizontal|start"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/date_with_colon"
            android:id="@+id/tvDate"
            android:gravity="center|start"
            android:textStyle="bold" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:id="@+id/tvSelectedDate"
            android:gravity="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/btnChangeDate" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/time_with_colon"
            android:id="@+id/tvTime"
            android:gravity="center|start"
            android:textStyle="bold" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:id="@+id/tvSelectedTime"
            android:gravity="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/btnChangeTime" />
    </LinearLayout>

</LinearLayout>
